--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@appwrite.io/pink": "^1.0.0",
+    "@appwrite.io/pink-icons": "^1.0.0",
+    "appwrite": "^16.0.2",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
